# voicetodo-server

./: README.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt  voicetodo.service
tests/: test_db.py  test_decompose.py
voicetodo/: cli.py  config.py  db.py  decompose.py  server.py  transcribe.py
